[project]
name = "panda-pytest-assertions"
description = "Complex assertions that can be used when writing test with pytest"
version = "0.2.2-dev"
authors = [
    { name = "Cyber Panda", email = "krunchfrompoland@gmail.com" },
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pytest >4.6.0",
    "pyyaml >=6.0.1,<7",
]

[project.urls]
homepage = "https://github.com/KRunchPL/panda-pytest-assertions"
repository = "https://github.com/KRunchPL/panda-pytest-assertions"
documentation = "https://github.com/KRunchPL/panda-pytest-assertions"

[tool.hatch.build.targets.wheel]
packages = [
    "src/panda_pytest_assertions",
]

[dependency-groups]
dev = [
    "darglint >=1.8.1,<2",
    "flake8 >=7.1.1,<8",
    "mypy >=1.15.0,<1.16.0",
    "pytest-cov >=6.0.0,<7",
    "pytest-mock >=3.14.0,<4",
    "ruff >=0.9.5,<0.10.0",
    "munch >=4.0.0,<5",
    "munch-stubs >=0.1.2,<0.2",
    "types-pyyaml >=6.0.12.20240917,<7",
]
docs = [
    "mkdocs-material >=9.5.44,<10",
    "mike >=2.1.3,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
